src/objects/POs_Outlet_Xref_Bidl__c.object
<CustomObject>
    <fields>
        <fullName>C_user_flag10__c</fullName>
        <label>User flag10</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_user_flag1__c</fullName>
        <label>User flag1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_user_flag2__c</fullName>
        <label>User flag2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_user_amt1__c</fullName>
        <label>User amt1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_user_amt2__c</fullName>
        <label>User amt2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_user_amt3__c</fullName>
        <label>User amt3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_user_amt1__c</fullName>
        <label>User amt1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_user_amt2__c</fullName>
        <label>User amt2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_user_amt3__c</fullName>
        <label>User amt3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c_childDeptCodeBev__c</fullName>
        <label>ChildDeptCodeBev</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_childDeptCodeFood__c</fullName>
        <label>ChildDeptCodeFood</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_childGLCd__c</fullName>
        <label>ChildGLcode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_childPropCd__c</fullName>
        <label>ChildPropcode</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_childRevCtrCd__c</fullName>
        <label>ChildRevCtrcode</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_cms_rev_center_cd__c</fullName>
        <label>Cms rev center code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_comp_grp__c</fullName>
        <label>Comp group</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_comp_grp_desc__c</fullName>
        <label>Comp group description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_comp_type__c</fullName>
        <label>Comp type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_comp_type_desc__c</fullName>
        <label>Comp type description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_cons_rev_center_desc__c</fullName>
        <label>Cons rev center description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_current_flag__c</fullName>
        <label>Current flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_dept_2__c</fullName>
        <label>Dept 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_dept_group_alternate__c</fullName>
        <label>Dept group alternate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_dept_grp_cd_gl__c</fullName>
        <label>Dept group code GL</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_dept_num__c</fullName>
        <label>Dept number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_ess_pos_avero_name_bidl__c</fullName>
        <label>Ess pos avero name bidl</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_ess_pos_cat_bidl__c</fullName>
        <label>Ess pos cat bidl</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_ess_pos_subcat_bidl__c</fullName>
        <label>Ess pos subcat bidl</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_gl_company__c</fullName>
        <label>Gl company</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_gl_dept_cd__c</fullName>
        <label>Gl dept code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_gl_leasing_acct__c</fullName>
        <label>Gl leasing account</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_isCombined__c</fullName>
        <label>IsCombined</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_isWeeklyReporting__c</fullName>
        <label>IsWeeklyReporting</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_lms_rev_center_cd__c</fullName>
        <label>Lms rev center code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_main_category__c</fullName>
        <label>Main category</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pos_rev_center_cd__c</fullName>
        <label>Pos rev center code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pos_rev_center_desc__c</fullName>
        <label>Pos rev center description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <label>Property code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_report_name__c</fullName>
        <label>Report name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_subcategory__c</fullName>
        <label>Subcategory</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_effective_end_dt__c</fullName>
        <label>Effective end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_effective_start_dt__c</fullName>
        <label>Effective start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>i_dept_group_alt_sort__c</fullName>
        <label>Dept group alt sort</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ess_breakfast_shift_end__c</fullName>
        <label>Ess breakfast shift end</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ess_breakfast_shift_start__c</fullName>
        <label>Ess breakfast shift start</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ess_dinner_shift_end__c</fullName>
        <label>Ess dinner shift end</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ess_dinner_shift_start__c</fullName>
        <label>Ess dinner shift start</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ess_latenight_shift_end__c</fullName>
        <label>Ess latenight shift end</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ess_latenight_shift_start__c</fullName>
        <label>Ess latenight shift start</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ess_lunch_shift_end__c</fullName>
        <label>Ess lunch shift end</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ess_lunch_shift_start__c</fullName>
        <label>Ess lunch shift start</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ess_pos_cat_sort_bidl__c</fullName>
        <label>Ess pos cat sort bidl</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ess_pos_seat_capacity_bidl__c</fullName>
        <label>Ess pos seat capacity bidl</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ess_pos_sqft_boh_bidl__c</fullName>
        <label>Ess pos sqft boh bidl</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ess_pos_sqft_foh_bidl__c</fullName>
        <label>Ess pos sqft foh bidl</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ess_pos_subcat_sort_bidl__c</fullName>
        <label>Ess pos subcat sort bidl</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ess_pos_turn_time_bidl__c</fullName>
        <label>Ess pos turn time bidl</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_main_category_sort__c</fullName>
        <label>Main category sort</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_subcategory_sort__c</fullName>
        <label>Subcategory sort</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>POS Outlet Xref Bidl</label>
    <nameField>
        <displayFormat>POXB-{00000}</displayFormat>
        <label>Pos outlet xref bidl Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Outlet Xref Bidl</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>